--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <div class="brand">zaiimrq</div>
       <div class="menu">
         <a href="#home">home</a>
-        <a href="#">profile</a>
+        <a href="#profile">profile</a>
         <a href="#">project</a>
         <a href="#">goal</a>
       </div>
@@ -56,6 +56,17 @@
     </div>
     <div class="right">
       <div class="pic"></div>
+    </div>
+  </section>
+  <section id="profile">
+    <div class="left-profile">
+      <div class="pic pic-profile"></div>
+    </div>
+    <div class="right-profile">
+      <span class="about-me"><h1>about me.</h1></span>
+      <div class="text-about-me">
+        <p>Halo, saya Shariful Zaidin. Saya adalah seorang mahasiswa jurusan Teknik Informatika yang sedang mempelajari HTML, CSS, dan sedikit JavaScript.</p><br><p>Saya bercita-cita menjadi seorang fullstack developer yang handal dan kreatif. Saya senang membaca buku tentang teknologi dan mengikuti komunitas pengembang online. Saya juga senang berolahraga untuk menjaga kesehatan fisik dan mental saya.</p><br><p>Saya siap untuk bekerja sama pada proyek-proyek yang menantang. Terima kasih sudah berkunjung ke website saya!</p>
+      </div>
     </div>
   </section>
   <script src="https://unpkg.com/typed.js@2.0.16/dist/typed.umd.js"></script>
