--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.4/font/bootstrap-icons.css">
   <!-- css style -->
   <link rel="stylesheet" href="Assets/css/style.css">
+  <!-- css swiper -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css"/>
 </head>
 <body>
   <header>
@@ -19,8 +21,9 @@
       <div class="menu">
         <a href="#home">home</a>
         <a href="#profile">profile</a>
-        <a href="#">project</a>
+        <a href="#project">project</a>
         <a href="#">goal</a>
+        <i class="bi bi-hamburger"></i>
       </div>
     </nav>
   </header>
@@ -69,6 +72,47 @@
       </div>
     </div>
   </section>
+  <section id="project">
+    <div class="project-container">
+      <div class="nav-project">
+        <h1>recent project</h1>
+      </div>
+      <div class="swiper">
+        <div class="swiper-wrapper">
+          <div class="swiper-slide">
+            <div class="slide">
+              <img onclick="window.location.href='https://devz-id.github.io/random/login-page-02'" src="Assets/img/1.png" alt="Login Page">
+            </div>
+          </div>
+          <div class="swiper-slide">
+            <div class="slide">
+              <img onclick="window.location.href='https://devz-id.github.io/random/love-animation'" src="Assets/img/2.png" alt="Love Animation">
+            </div>
+          </div>
+          <div class="swiper-slide">
+            <div class="slide">
+              <img onclick="window.location.href='https://devz-id.github.io/random/login-page-01'" src="Assets/img/3.png" alt="Login Page">
+            </div>
+          </div>
+          <div class="swiper-slide">
+            <div class="slide">
+              <img onclick="window.location.href='https://devz-id.github.io/random/gallery'" src="Assets/img/4.png" alt="Gallery">
+            </div>
+          </div>
+          <div class="swiper-slide">
+            <div class="slide">
+              <img onclick="window.location.href='https://devz-id.github.io/random/my-first-web'" src="Assets/img/5.png" alt="Website">
+            </div>
+          </div>
+        </div>
+        <div class="swiperBtn swiper-button-prev"></div>
+        <div class="swiperBtn swiper-button-next"></div>
+      </div>
+    </div>
+  </section>
+  <!-- swiper script -->
+  <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
+  <!-- typed script -->
   <script src="https://unpkg.com/typed.js@2.0.16/dist/typed.umd.js"></script>
   <script src="Assets/js/script.js"></script>
 </body>
