--- a/index.html
+++ b/index.html
@@ -1,119 +1,174 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Web Developer Portofolio</title>
-  <link rel="icon" href="Assets/img/pic.ico" type="image/x-icon">
-  <!-- fonts -->
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Web Developer Portofolio</title>
+    <link rel="icon" href="Assets/img/pic.ico" type="image/x-icon" />
+    <!-- fonts -->
 
-  <!-- bootstrap icons -->
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.4/font/bootstrap-icons.css">
-  <!-- css style -->
-  <link rel="stylesheet" href="Assets/css/style.css">
-  <!-- css swiper -->
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css"/>
-</head>
-<body>
-  <header>
-    <nav>
-      <div class="brand">zaiimrq</div>
-      <div class="menu">
-        <a href="#home">home</a>
-        <a href="#profile">profile</a>
-        <a href="#project">project</a>
-        <a href="#">goal</a>
-        <i class="bi bi-hamburger"></i>
-      </div>
-    </nav>
-  </header>
-  <section id="home">
-    <div class="left">
-      <h3>hello it's me</h3>
-      <h1>shariful zaidin</h1>
-      <h3>and i'm a <span id="multiple-text"></span></h3>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum et quasi nostrum atque earum, deleniti.</p>
-      <div class="social">
-        <div class="social-link">
-          <a href="https://www.instagram.com/zaiimrq">
-            <i class="bi bi-instagram"></i>
-          </a>
+    <!-- bootstrap icons -->
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.4/font/bootstrap-icons.css"
+    />
+    <!-- css style -->
+    <link rel="stylesheet" href="Assets/css/style.css" />
+    <!-- css swiper -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css"/>
+  </head>
+  <body>
+    <header>
+      <nav>
+        <div class="brand">zaiimrq</div>
+        <div class="menu">
+          <a href="#home">home</a>
+          <a href="#profile">profile</a>
+          <a href="#project">project</a>
+          <a href="#talk">talk</a>
+          <i class="bi bi-hamburger"></i>
         </div>
-        <div class="social-link">
-          <a href="https://www.facebook.com/zaiimrq">
-            <i class="bi bi-facebook"></i>
-          </a>
-        </div>
-        <div class="social-link">
-          <a href="https://wa.me/6285210495637">
-            <i class="bi bi-whatsapp"></i>
-          </a>
-        </div>
-        <div class="social-link">
-          <a href="https://www.github.com/devz-id">
-            <i class="bi bi-github"></i>
-          </a>
-        </div>
-      </div>
-      <button class="btnCv">Download CV</button>
-    </div>
-    <div class="right">
-      <div class="pic"></div>
-    </div>
-  </section>
-  <section id="profile">
-    <div class="left-profile">
-      <div class="pic pic-profile"></div>
-    </div>
-    <div class="right-profile">
-      <span class="about-me"><h1>about me.</h1></span>
-      <div class="text-about-me">
-        <p>Halo, saya Shariful Zaidin. Saya adalah seorang mahasiswa jurusan Teknik Informatika yang sedang mempelajari HTML, CSS, dan sedikit JavaScript.</p><br><p>Saya bercita-cita menjadi seorang fullstack developer yang handal dan kreatif. Saya senang membaca buku tentang teknologi dan mengikuti komunitas pengembang online. Saya juga senang berolahraga untuk menjaga kesehatan fisik dan mental saya.</p><br><p>Saya siap untuk bekerja sama pada proyek-proyek yang menantang. Terima kasih sudah berkunjung ke website saya!</p>
-      </div>
-    </div>
-  </section>
-  <section id="project">
-    <div class="project-container">
-      <div class="nav-project">
-        <h1>recent project</h1>
-      </div>
-      <div class="swiper">
-        <div class="swiper-wrapper">
-          <div class="swiper-slide">
-            <div class="slide">
-              <img onclick="window.location.href='https://devz-id.github.io/random/login-page-02'" src="Assets/img/1.png" alt="Login Page">
-            </div>
+      </nav>
+    </header>
+    <section id="home">
+      <div class="left">
+        <h3>hello it's me</h3>
+        <h1>shariful zaidin</h1>
+        <h3>and i'm a <span id="multiple-text"></span></h3>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum et
+          quasi nostrum atque earum, deleniti.
+        </p>
+        <div class="social">
+          <div class="social-link">
+            <a href="https://www.instagram.com/zaiimrq">
+              <i class="bi bi-instagram"></i>
+            </a>
           </div>
-          <div class="swiper-slide">
-            <div class="slide">
-              <img onclick="window.location.href='https://devz-id.github.io/random/love-animation'" src="Assets/img/2.png" alt="Love Animation">
-            </div>
+          <div class="social-link">
+            <a href="https://www.facebook.com/zaiimrq">
+              <i class="bi bi-facebook"></i>
+            </a>
           </div>
-          <div class="swiper-slide">
-            <div class="slide">
-              <img onclick="window.location.href='https://devz-id.github.io/random/login-page-01'" src="Assets/img/3.png" alt="Login Page">
-            </div>
+          <div class="social-link">
+            <a href="https://wa.me/6285210495637">
+              <i class="bi bi-whatsapp"></i>
+            </a>
           </div>
-          <div class="swiper-slide">
-            <div class="slide">
-              <img onclick="window.location.href='https://devz-id.github.io/random/gallery'" src="Assets/img/4.png" alt="Gallery">
-            </div>
-          </div>
-          <div class="swiper-slide">
-            <div class="slide">
-              <img onclick="window.location.href='https://devz-id.github.io/random/my-first-web'" src="Assets/img/5.png" alt="Website">
-            </div>
+          <div class="social-link">
+            <a href="https://www.github.com/devz-id">
+              <i class="bi bi-github"></i>
+            </a>
           </div>
         </div>
-        <div class="swiperBtn swiper-button-prev"></div>
-        <div class="swiperBtn swiper-button-next"></div>
+        <button class="btnCv">Download CV</button>
       </div>
-    </div>
-  </section>
-  <!-- swiper script -->
-  <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
-  <!-- typed script -->
-  <script src="https://unpkg.com/typed.js@2.0.16/dist/typed.umd.js"></script>
-  <script src="Assets/js/script.js"></script>
-</body>
+      <div class="right">
+        <div class="pic"></div>
+      </div>
+    </section>
+    <section id="profile">
+      <div class="left-profile">
+        <div class="pic pic-profile"></div>
+      </div>
+      <div class="right-profile">
+        <span class="about-me"><h1>about me.</h1></span>
+        <div class="text-about-me">
+          <p>
+            Halo, saya Shariful Zaidin. Saya adalah seorang mahasiswa jurusan
+            Teknik Informatika yang sedang mempelajari HTML, CSS, dan sedikit
+            JavaScript.
+          </p>
+          <br />
+          <p>
+            Saya bercita-cita menjadi seorang fullstack developer yang handal
+            dan kreatif. Saya senang membaca buku tentang teknologi dan
+            mengikuti komunitas pengembang online. Saya juga senang berolahraga
+            untuk menjaga kesehatan fisik dan mental saya.
+          </p>
+          <br />
+          <p>
+            Saya siap untuk bekerja sama pada proyek-proyek yang menantang.
+            Terima kasih sudah berkunjung ke website saya!
+          </p>
+        </div>
+      </div>
+    </section>
+    <section id="project">
+      <div class="project-container">
+        <div class="nav-project">
+          <h1>recent project</h1>
+        </div>
+        <div class="swiper">
+          <div class="swiper-wrapper">
+            <div class="swiper-slide">
+              <div class="slide">
+                <img
+                  onclick="window.location.href='https://devz-id.github.io/random/login-page-02'"
+                  src="Assets/img/1.png"
+                  alt="Login Page"
+                />
+              </div>
+              <span class="imgSpan">login page</span>
+            </div>
+            <div class="swiper-slide">
+              <div class="slide">
+                <img
+                  onclick="window.location.href='https://devz-id.github.io/random/love-animation'"
+                  src="Assets/img/2.png"
+                  alt="Love Animation"
+                />
+              </div>
+              <span class="imgSpan">love animation</span>
+            </div>
+            <div class="swiper-slide">
+              <div class="slide">
+                <img
+                  onclick="window.location.href='https://devz-id.github.io/random/login-page-01'"
+                  src="Assets/img/3.png"
+                  alt="Login Page"
+                />
+              </div>
+              <span class="imgSpan">login page</span>
+            </div>
+            <div class="swiper-slide">
+              <div class="slide">
+                <img
+                  onclick="window.location.href='https://devz-id.github.io/random/gallery'"
+                  src="Assets/img/4.png"
+                  alt="Gallery"
+                />
+              </div>
+              <span class="imgSpanSet">gallery</span>
+            </div>
+            <div class="swiper-slide">
+              <div class="slide">
+                <img
+                  onclick="window.location.href='https://devz-id.github.io/random/my-first-web'"
+                  src="Assets/img/5.png"
+                  alt="Website"
+                />
+              </div>
+              <span class="imgSpanSet">first website</span>
+            </div>
+          </div>
+          <div class="swiperBtn swiper-button-prev"></div>
+          <div class="swiperBtn swiper-button-next"></div>
+        </div>
+      </div>
+    </section>
+    <section id="talk">
+      <div class="contact">
+        <h1>contact me</h1>
+      </div>
+      <form action="">
+        
+      </form>
+    </section>
+    <!-- swiper script -->
+    <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
+    <!-- typed script -->
+    <script src="https://unpkg.com/typed.js@2.0.16/dist/typed.umd.js"></script>
+    <script src="Assets/js/script.js"></script>
+  </body>
 </html>
