--- a/index.html
+++ b/index.html
@@ -157,9 +157,33 @@
       <div class="contact">
         <h1>contact me</h1>
       </div>
-      <form action="">
-        
-      </form>
+
+      <div class="form-wrapper">
+        <form action="" class="form">
+          <input type="text" id="name" placeholder="Your Name">
+          <input type="email" id="email" placeholder="Your Email">
+          <div class="radio-wrapper">
+            <div class="left-radio">
+              <input type="radio" id="radio-1">
+              <label for="radio-1" class="radio-label">
+                <p>frontend developer</p>
+              </label>
+            </div>
+            <div class="right-radio">
+              <input type="radio" id="radio-2">
+              <label for="radio-2" class="radio-label">
+                <p>backend developer</p>
+              </label>
+            </div>
+
+          </div>
+          <textarea class="area" placeholder="Your Message..."></textarea>
+          <div class="btn-wrapper">
+            <button class="btn">send</button>
+          </div>
+        </form>
+      </div>
+
     </section>
     <!-- swiper script -->
     <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
