--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     />
     <!-- css style -->
     <link rel="stylesheet" href="Assets/css/style.css" />
+    <link rel="stylesheet" href="Assets/css/media.css">
     <!-- css swiper -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css"/>
   </head>
@@ -31,6 +32,7 @@
       </nav>
     </header>
     <section id="home">
+      <div class="media-pic"></div>
       <div class="left">
         <h3>hello it's me</h3>
         <h1>shariful zaidin</h1>
