--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       <div class="left">
         <h3>hello it's me</h3>
         <h1>shariful zaidin</h1>
-        <h3>and i'm a <span id="multiple-text"></span></h3>
+        <h3 id="and">and i'm a <span id="multiple-text"></span></h3>
         <p>
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum et
           quasi nostrum atque earum, deleniti.
