responsive 576px dan sedikit javascript

--- a/index.html
+++ b/index.html
@@ -22,13 +22,14 @@
     <header>
       <nav>
         <div class="brand">zaiimrq</div>
-        <div class="menu">
+        <div class="menu" id="menuActive">
+          <i class="bi bi-x x-icon" id="xIcon"></i>
           <a href="#home">home</a>
           <a href="#profile">profile</a>
           <a href="#project">project</a>
           <a href="#talk">talk</a>
-          <i class="bi bi-hamburger"></i>
         </div>
+        <i id="menuIcon" class="bi bi-list"></i>
       </nav>
     </header>
     <section id="home">
